unpackaged/main/default/objects/Course_Prerequisite__c/Course_Prerequisite__c.object-meta.xml
<CustomObject>
    <label>Course Prerequisite</label>
    <nameField>
        <displayFormat>PreReq-{0000000}</displayFormat>
        <label>Prerequisite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Prerequisites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>