unpackaged/main/default/objects/Course_Prerequisite__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Question__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Algebra II</fullName>
            </value>
            <value>
                <fullName>Geometry</fullName>
            </value>
            <value>
                <fullName>Trigonometry</fullName>
            </value>
            <value>
                <fullName>Pre-Calculus</fullName>
            </value>
            <value>
                <fullName>Calculus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>One Year</fullName>
            </value>
            <value>
                <fullName>Two Years</fullName>
            </value>
            <value>
                <fullName>Three Years</fullName>
            </value>
            <value>
                <fullName>Four Years</fullName>
            </value>
            <value>
                <fullName>B- or Higher</fullName>
            </value>
            <value>
                <fullName>C+ or Lower</fullName>
            </value>
            <value>
                <fullName>Contemporary Math</fullName>
                <isActive>false</isActive>
                <label>Contemporary Math</label>
            </value>
            <value>
                <fullName>Pre-Calculus I</fullName>
                <isActive>false</isActive>
                <label>Pre-Calculus I</label>
            </value>
            <value>
                <fullName>Pre-Calculus II</fullName>
                <isActive>false</isActive>
                <label>Pre-Calculus II</label>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>