unpackaged/main/default/objects/Course_Prerequisite__c/fields/Corequisite_Course__c.field-meta.xml
<CustomField>
    <fullName>Corequisite_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corequisite Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Prerequisites (Corequisite Course)</relationshipLabel>
    <relationshipName>Course_Corequisites</relationshipName>
    <type>Lookup</type>
</CustomField>