unpackaged/main/default/objects/Course_Prerequisite__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Prerequisites of the same group are all required. Prerequisites of different groups are optional.</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>