unpackaged/main/default/objects/Course_Prerequisite__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>What is the students highest level of math completed with a C or greater?</fullName>
            </value>
            <value>
                <fullName>How many years of High School Spanish has the student completed with a C or greater?</fullName>
            </value>
            <value>
                <fullName>What was the students Junior year English grade?</fullName>
            </value>
            <value>
                <fullName>What is the student&#39;s highest level of math completed with a C or greater?</fullName>
                <isActive>false</isActive>
                <label>What is the student&#39;s highest level of math completed with a C or greater?</label>
            </value>
            <value>
                <fullName>What was the student&#39;s Junior year English grade?</fullName>
                <isActive>false</isActive>
                <label>What was the student&#39;s Junior year English grade?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>