unpackaged/main/default/objects/Course_Prerequisite__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Course_Subject</valueSetName>
    </valueSet>
</CustomField>