unpackaged/main/default/objects/Course_Prerequisite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Course__c</columns>
    <columns>Group__c</columns>
    <columns>Description__c</columns>
    <columns>Requirement__c</columns>
    <columns>Type__c</columns>
    <columns>Corequisite_Course__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>